# ff8_tthelper_2026

./: README.md
ff8_tthelper/: Program.fs
python/: README.md  pyproject.toml
python/ff8_tthelper_py/: ai.py  bitmap_helpers.py  domain_types.py  game_state_detection.py  main.py
python/tests/: helpers.py  test_ai.py  test_game_state_detection.py
