[project]
name = "ff8-tthelper"
version = "0.1.0"
description = "Autonomous Triple Triad player for FF8 (Steam, Windows) - Python port"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ff8-tthelper = "ff8_tthelper_py.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ff8_tthelper_py*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
